--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" ng-app>
 <head>
 <title>Fresh Ideas</title>
 <meta charset="UTF-8">
 <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
+  <script src="js/angular.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/tastyfood.css">
 </head>
